--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -125,7 +125,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th></th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r101-login-modal">R101</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui05-log-in">UI05</a></td>
     <td>Error</td>
   </tr>
   <tr>
@@ -150,7 +150,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Redirects</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r101-login-modal">R101</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui01-homepage">UI01</a></td>
     <td>Success</td>
   </tr>
   <tr>
@@ -215,7 +215,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th></th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r104-register-modal">R104</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui06-register">UI06</a></td>
     <td>Error</td>
   </tr>
   <tr>
@@ -549,7 +549,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Submit</th>
-    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r305-create-project-action">R303</a></th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r305-create-project-action">R303</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
@@ -591,7 +591,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Redirects</th>
-    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r304-create-project-form">R304</a></td>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r301-view-project-tasks">R301</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
@@ -682,7 +682,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>UI</th>
-    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/images/Interface/Desktop/UI30_Edit_Users.png">UI10</a></td>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/images/Interface/Desktop/UI30_Edit_Users.png">UI30</a></td>
   </tr>
   <tr>
     <th>Submit</th>
@@ -734,7 +734,6 @@ The architecture of our **Project Management** web application to develop is doc
     <th>Permissions</th>
     <td colspan="2">COO</td>
   </tr>
-</table>
 </table>
 
 #### R310: Create Project Task Form
@@ -836,9 +835,8 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Redirects</th>
-    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r301-view-project-tasks">R301</a>       </td>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r301-view-project-tasks">R301</a></td>
   </tr>
-
   <tr>
     <th>Permissions</th>
     <td colspan="2">COO</td>
@@ -871,7 +869,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Submit</th>
-    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r313-edit-project-task-action">R313</a></th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r313-edit-project-task-action">R313</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
@@ -909,8 +907,8 @@ The architecture of our **Project Management** web application to develop is doc
     <td>Project Description</td>
   </tr>
   <tr>
-    <td>?imgPath: string</td>
-    <td>Project Thumbnail Path</td>
+    <td>?img: file</td>
+    <td>Project Task Thumbnail Picture</td>
   </tr>
   <tr>
     <th>Redirects</th>
@@ -950,9 +948,8 @@ The architecture of our **Project Management** web application to develop is doc
     <td>Project Description</td>
   </tr>
   <tr>
-    <th></th>
-    <td>?imgPath: string</td>
-    <td>Project Thumbnail Path</td>
+    <td>?img: file</td>
+    <td>Project Task Thumbnail Picture</td>
   </tr>
   <tr>
     <th>Redirects</th>
@@ -976,6 +973,7 @@ The architecture of our **Project Management** web application to develop is doc
 - R406: Search Tasks API ```/api/search_projects```
 
 #### R401: Search Projects Action
+
 <table>
   <tr>
     <th>URL</th>
@@ -1009,6 +1007,7 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R402: Search Projects API
+
 <table>
   <tr>
     <th>URL</th>
@@ -1038,6 +1037,7 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R403: Search Users Action
+
 <table>
   <tr>
     <th>URL</th>
@@ -1071,6 +1071,7 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R404: Search Users API
+
 <table>
   <tr>
     <th>URL</th>
@@ -1100,6 +1101,7 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R405: Search Tasks Action
+
 <table>
   <tr>
     <th>URL</th>
@@ -1133,6 +1135,7 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R406: Search Tasks API
+
 <table>
   <tr>
     <th>URL</th>
@@ -1284,7 +1287,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th></th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r504-edit-project-modal">R504</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r503-view-projects">R503</a></td>
     <td>Error</td>
   </tr>
   <tr>
@@ -1369,12 +1372,12 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Redirects</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r507-view-users">R507</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r506-view-users">R506</a></td>
     <td>Success</td>
   </tr>
   <tr>
     <th></th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r508-edit-user-modal">R508</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r506-view-users">R506</a></td>
     <td>Error</td>
   </tr>
   <tr>
@@ -1404,12 +1407,12 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Redirects</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r507-view-users">R507</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r506-view-users">R506</a></td>
     <td>Success</td>
   </tr>
   <tr>
     <th></th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r507-view-users">R507</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r506-view-users">R506</a></td>
     <td>Error</td>
   </tr>
   <tr>
@@ -1591,11 +1594,13 @@ The architecture of our **Project Management** web application to develop is doc
   * Response Body - Data sent from the server, in response to a given request
   * Permissions - Required permissions to access the resource -->
 
-<!-- ***
+***
 ## Revision history
 Changes made to the first submission:
-1. Item 1
-1. Item 2 -->
+1. Removed Modals.
+2. Fixed UI and Endpoints links.
+3. Added API support for searches (projects, users and tasks).
+4. Own Authenticated User Permissions.
 
 ***
 
