:pencil2: A7, still missing tag/comments actions :pencil2:

--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -88,9 +88,9 @@ The architecture of our **Project Management** web application to develop is doc
 
 #### Endpoints of Module Authentication and Individual Profile
 
-- R101: Login Action ```/``` <!-- TODO -->
-- R102: Logout Action ```/``` <!-- TODO -->
-- R103: Register Action ```/``` <!-- TODO -->
+- R101: Login Action ```/login``` <!-- TODO -->
+- R102: Logout Action ```/logout``` <!-- TODO -->
+- R103: Register Action ```/register``` <!-- TODO -->
 - R104: View Profile ```/profile/{id}```
 - R105: Edit Profile Action ```/profile/{id}/edit``` <!-- TODO -->
 
@@ -98,7 +98,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/</td>
+    <td colspan="2">/login</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -138,7 +138,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/</td>
+    <td colspan="2">/logout</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -163,7 +163,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/</td>
+    <td colspan="2">/register</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -724,7 +724,7 @@ The architecture of our **Project Management** web application to develop is doc
     <td>Project Description</td>
   </tr>
   <tr>
-    <td>?img: file?</td>
+    <td>?img: file</td>
     <td>Project Thumbnail Path</td>
   </tr>
   <tr>
@@ -968,9 +968,9 @@ The architecture of our **Project Management** web application to develop is doc
 - R401: Search Projects Action ```/search_projects```
 - R402: Search Projects API ```/api/search_projects```
 - R403: Search Users Action ```/search_users```
-- R404: Search Users API ```/api/search_projects```
+- R404: Search Users API ```/api/search_users```
 - R405: Search Tasks Action ```/search_tasks```
-- R406: Search Tasks API ```/api/search_projects```
+- R406: Search Tasks API ```/api/search_tasks```
 
 #### R401: Search Projects Action
 
