task/comments done :pencil2:

--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -95,6 +95,7 @@ The architecture of our **Project Management** web application to develop is doc
 - R105: Edit Profile Action ```/profile/{id}/edit``` <!-- TODO -->
 
 #### R101: Login Action
+
 <table>
   <tr>
     <th>URL</th>
@@ -135,6 +136,7 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R102: Logout Action
+
 <table>
   <tr>
     <th>URL</th>
@@ -160,6 +162,7 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R103: Register Action
+
 <table>
   <tr>
     <th>URL</th>
@@ -225,6 +228,7 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R104: View Profile
+
 <table>
   <tr>
     <th>URL</th>
@@ -254,6 +258,7 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R105: Edit Profile Action
+
 <table>
   <tr>
     <th>URL</th>
@@ -332,6 +337,7 @@ The architecture of our **Project Management** web application to develop is doc
 - R203: View Tasks ```/dashboard/tasks```
 
 #### R201: Dashboard Page
+
 <table>
   <tr>
     <th>URL</th>
@@ -356,6 +362,7 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R202: View Projects
+
 <table>
   <tr>
     <th>URL</th>
@@ -437,6 +444,10 @@ The architecture of our **Project Management** web application to develop is doc
 - R314: Edit Project Task Action ```/dashboard/my_projects/{idProject}/manage_tasks```
 
 - R315: Edit Project Action ```/dashboard/my_projects/{idProject}/options```
+
+- R316: View Project Task ```/dashboard/my_projects/{idProject}/task/{idTask}```
+
+- R317: Create Project Task Comment ```/dashboard/my_projects/{idProject}/task/{idTask}```
 
 #### R301: View Project Tasks
 
@@ -792,8 +803,8 @@ The architecture of our **Project Management** web application to develop is doc
     <td>Task title</td>
   </tr>
   <tr>
-    <td>+category: string</td>
-    <td>Task category</td>
+    <td>+tag: string</td>
+    <td>Task tags</td>
   </tr>
   <tr>
     <td>+content: string</td>
@@ -957,6 +968,77 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
     <th>Permissions</th>
     <td colspan="2">OWN, COO</td>
+  </tr>
+</table>
+
+#### R316: View Project Task
+
+<table>
+  <tr>
+    <th>URL</th>
+    <td colspan="2">/dashboard/my_projects/{idProject}/task/{idTask}</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td colspan="2">Shows project task.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td colspan="2">GET</td>
+  </tr>
+  <tr>
+    <th>Parameters</th>
+    <td>+idProject: integer</td>
+    <td>Project primary key</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td>+idTask: integer</td>
+    <td>Task primary key</td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui17-task-page">UI17</a></td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td colspan="2">MEM</td>
+  </tr>
+</table>
+
+#### R317: Create Project Task Comment
+
+<table>
+  <tr>
+    <th>URL</th>
+    <td colspan="2">/dashboard/my_projects/{idProject}/task/{idTask}</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td colspan="2">Action that inserts a comment within a task.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td colspan="2">POST</td>
+  </tr>
+  <tr>
+    <th>Request Body</th>
+    <td>+comment: string</td>
+    <td>Task Comment</td>
+  </tr>
+  <tr>
+    <th>Redirects</th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r316-view-project-task">R316</a></td>
+    <td>Success</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r316-view-project-task">R316</a></td>
+    <td>Error</td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td colspan="2">MEM</td>
   </tr>
 </table>
 
@@ -1601,10 +1683,11 @@ Changes made to the first submission:
 2. Fixed UI and Endpoints links.
 3. Added API support for searches (projects, users and tasks).
 4. Own Authenticated User Permissions.
+5. View Project Task and Create Task Comment Action.
 
 ***
 
-GROUP1743, 08/04/2018
+GROUP1743, 15/04/2018
 
 > Mateus Pedroza Cortes Marques, up201601876@fe.up.pt
 > Bernardo Manuel Costa Barbosa, up201503477@fe.up.pt
