prototype section 2/3 :construction:

--- a/artifacts/A8/A8.md
+++ b/artifacts/A8/A8.md
@@ -56,12 +56,14 @@ The Vertical Prototype includes the implementation of two or more user stories (
 
 > Module M02: Module Name
 
-
 ## 2. Prototype
 
-> URL of the prototype plus user credentials necessary to test all features.
-> Link to the prototype source code on Github.
+The prototype is available at http://lbaw1743.lbaw-prod.fe.up.pt/
 
+Credentials:
+  <!-- TODO: username / password -->
+
+The code is avalable at https://github.com/mpcmarques/lbaw1743/lbaw-laravel
 
 ## Revision history
 
