A8 some implemented resources :pencil2:

--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -1,4 +1,4 @@
-# A7: High-level architecture. Privileges. Web resources specification
+# A7: Web Resources Documentation
 
 The architecture of our **Project Management** web application to develop is documented indicating the catalogue of resources and the properties of each resource, including: references to the graphical interfaces, and the format of JSON responses.
 
@@ -1510,7 +1510,7 @@ The architecture of our **Project Management** web application to develop is doc
 - R501: About Page ```/about```
 - R502: Contact Page ```/contact```
 - R503: FAQ Page ```/faq```
-- R504: 404 ```/```
+- R504: 404 ```/404```
 
 #### R601: About Page
 <table>
@@ -1588,7 +1588,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td>/</td>
+    <td>/404</td>
   </tr>
   <tr>
     <th>Description</th>
