--- a/artifacts/A8/A8.md
+++ b/artifacts/A8/A8.md
@@ -52,9 +52,59 @@ The Vertical Prototype includes the implementation of two or more user stories (
 
 > Identify the web resources that were implemented in the prototype.
 
-> Module M01: Module Name
+#### Module M01: Authentication and Individual Profile
 
-> Module M02: Module Name
+#### Module M02: Dashboard
+
+#### Module M03: Projects and Project Settings
+
+#### Module M04: Search Engine
+
+<table>
+  <tr>
+    <th>Web Resource Reference</th>
+    <th>URL</th>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r401-search-projects-action">R401</a></td>
+    <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/search_projects">/search_projects</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r403-search-users-action">R403</a></td>
+    <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/search_users">/search_users</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r405-search-tasks-action">R405</a></td>
+    <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/search_tasks">/search_tasks</a></td>
+  </tr>
+</table>
+
+#### Module M05: Administration
+
+#### Module M06: Static Pages
+
+<table>
+  <tr>
+    <th>Web Resource Reference</th>
+    <th>URL</th>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r601-about-page">R601</a></td>
+    <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/about">/about</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r602-contact-page">R602</a></td>
+    <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/contact">/contact</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r603-faq-page">R603</a></td>
+    <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/faq">/faq</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r604-404">R604</a></td>
+    <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/404">/404</a></td>
+  </tr>
+</table>
 
 ## 2. Prototype
 
