:pencil2: A8 Administration Resources :pencil2:

--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -1507,10 +1507,10 @@ The architecture of our **Project Management** web application to develop is doc
 
 #### Endpoints of Module Static Pages
 
-- R501: About Page ```/about```
-- R502: Contact Page ```/contact```
-- R503: FAQ Page ```/faq```
-- R504: 404 ```/404```
+- R601: About Page ```/about```
+- R602: Contact Page ```/contact```
+- R603: FAQ Page ```/faq```
+- R604: 404 Page```/404```
 
 #### R601: About Page
 <table>
