--- a/artifacts/A8/A8.md
+++ b/artifacts/A8/A8.md
@@ -66,20 +66,59 @@ The Vertical Prototype includes the implementation of two or more user stories (
     <th>URL</th>
   </tr>
   <tr>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r401-search-projects-action">R401</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r401-search-projects-action">R401: Search Projects</a></td>
     <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/search_projects">/search_projects</a></td>
   </tr>
   <tr>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r403-search-users-action">R403</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r403-search-users-action">R403: Search Users</a></td>
     <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/search_users">/search_users</a></td>
   </tr>
   <tr>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r405-search-tasks-action">R405</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r405-search-tasks-action">R405: Search Tasks</a></td>
     <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/search_tasks">/search_tasks</a></td>
   </tr>
 </table>
 
 #### Module M05: Administration
+
+<table>
+  <tr>
+    <th>Web Resource Reference</th>
+    <th>URL</th>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r501-admin-login-form">R501: Admin Login Form</a></td>
+    <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/admin">/admin</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r502-admin-login-action">R502: Admin Login Action</a></td>
+    <td>POST /admin</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r503-view-projects">R503: View Projects</a></td>
+    <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/admin/projects">/admin/projects</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r504-edit-project-action">R504: Edit Project Action</a></td>
+    <td>POST /admin/projects/edit</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r505-remove-project-action">R505: Remove Project Action</a></td>
+    <td>POST /admin/projects/remove</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r506-view-users">R506: View Users</a></td>
+    <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/admin/users">/admin/users</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r507-edit-user-action">R507: Edit User Action</a></td>
+    <td>POST /admin/users/edit</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r508-remove-user-action">R508: Remove User Action</a></td>
+    <td>POST /admin/users/remove</a></td>
+  </tr>
+</table>
 
 #### Module M06: Static Pages
 
@@ -89,19 +128,19 @@ The Vertical Prototype includes the implementation of two or more user stories (
     <th>URL</th>
   </tr>
   <tr>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r601-about-page">R601</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r601-about-page">R601: About Page</a></td>
     <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/about">/about</a></td>
   </tr>
   <tr>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r602-contact-page">R602</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r602-contact-page">R602: Contact Page</a></td>
     <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/contact">/contact</a></td>
   </tr>
   <tr>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r603-faq-page">R603</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r603-faq-page">R603: FAQ Page</a></td>
     <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/faq">/faq</a></td>
   </tr>
   <tr>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r604-404">R604</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r604-404">R604: 404 Page</a></td>
     <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/404">/404</a></td>
   </tr>
 </table>
