:pencil2: A8 Dashboard Resources :pencil2:

--- a/artifacts/A8/A8.md
+++ b/artifacts/A8/A8.md
@@ -56,6 +56,25 @@ The Vertical Prototype includes the implementation of two or more user stories (
 
 #### Module M02: Dashboard
 
+<table>
+  <tr>
+    <th>Web Resource Reference</th>
+    <th>URL</th>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r201-dashboard-page">R201: Dashboard Page</a></td>
+    <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/dashboard">/dashboard</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r202-view-projects">R202: View Projects</a></td>
+    <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/dashboard/my_projects">/dashboard/my_projects</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r203-view-tasks">R203: View Tasks</a></td>
+    <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/dashboard/tasks">/dashboard/tasks</a></td>
+  </tr>
+</table>
+
 #### Module M03: Projects and Project Settings
 
 #### Module M04: Search Engine
