uncomment web resources only if implemented ... :construction:

--- a/artifacts/A8/A8.md
+++ b/artifacts/A8/A8.md
@@ -56,7 +56,7 @@ The Vertical Prototype includes the implementation of two or more user stories (
 
 #### Module M02: Dashboard
 
-<table>
+<!-- <table>
   <tr>
     <th>Web Resource Reference</th>
     <th>URL</th>
@@ -73,13 +73,13 @@ The Vertical Prototype includes the implementation of two or more user stories (
     <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r203-view-tasks">R203: View Tasks</a></td>
     <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/dashboard/tasks">/dashboard/tasks</a></td>
   </tr>
-</table>
+</table> -->
 
 #### Module M03: Projects and Project Settings
 
 #### Module M04: Search Engine
 
-<table>
+<!-- <table>
   <tr>
     <th>Web Resource Reference</th>
     <th>URL</th>
@@ -96,11 +96,11 @@ The Vertical Prototype includes the implementation of two or more user stories (
     <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r405-search-tasks-action">R405: Search Tasks</a></td>
     <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/search_tasks">/search_tasks</a></td>
   </tr>
-</table>
+</table> -->
 
 #### Module M05: Administration
 
-<table>
+<!-- <table>
   <tr>
     <th>Web Resource Reference</th>
     <th>URL</th>
@@ -137,7 +137,7 @@ The Vertical Prototype includes the implementation of two or more user stories (
     <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r508-remove-user-action">R508: Remove User Action</a></td>
     <td>POST /admin/users/remove</a></td>
   </tr>
-</table>
+</table> -->
 
 #### Module M06: Static Pages
 
@@ -181,7 +181,7 @@ The code is avalable at https://github.com/mpcmarques/lbaw1743/lbaw-laravel
 
 ***
 
-GROUP1743, xx/xx/2018
+GROUP1743, 16/04/2018
 
 > Mateus Pedroza Cortes Marques, up201601876@fe.up.pt
 > Bernardo Manuel Costa Barbosa, up201503477@fe.up.pt
