user stories implemented at the moment.

--- a/artifacts/A8/A8.md
+++ b/artifacts/A8/A8.md
@@ -6,47 +6,12 @@ The Vertical Prototype includes the implementation of two or more user stories (
 
 ### 1.1. Implemented User Stories
 
-> Identify the user stories that were implemented in the prototype.
-
-<table>
-  <tr>
-    <th>User Story reference</th>
-    <th>Name</th>
-    <th>Priority</th>
-    <th>Description</th>
-  </tr>
-  <tr>
-    <td>US01</td>
-    <td>...</td>
-    <td>...</td>
-    <td>...</td>
-  </tr>
-  <tr>
-  <td>US01</td>
-  <td>...</td>
-  <td>...</td>
-  <td>...</td>
-  </tr>
-  <tr>
-  <td>US01</td>
-  <td>...</td>
-  <td>...</td>
-  <td>...</td>
-  </tr>
-  <tr>
-  <td>US01</td>
-  <td>...</td>
-  <td>...</td>
-  <td>...</td>
-  </tr>
-  <tr>
-  <td>US01</td>
-  <td>...</td>
-  <td>...</td>
-  <td>...</td>
-  </tr>
-</table>
-
+| Identifier | Name | Priority | Description |
+| :----------:|:--------------|:---------:|:------------|
+| US04 | Home Page | high | As a User, I want to access the home page, so that I can see a brief website's description.  |
+| US05 | About page | low | As a User, I want to access about page, so that I can see the complete information about the website. |
+| US06 | FAQ page | medium | As a User, I want to access FAQ page, so that I can get answers to most frequently asked questions. |
+| US07 | Contact page | medium | As a User, I want to access contact page, so that I can have ways to contact the owner if I want to.|
 
 ### 1.2. Implemented Web Resources
 
