--- a/artifacts/A8/A8.md
+++ b/artifacts/A8/A8.md
@@ -13,96 +13,33 @@ The Vertical Prototype includes the implementation of two or more user stories (
 | US06 | FAQ page | medium | As a User, I want to access FAQ page, so that I can get answers to most frequently asked questions. |
 | US07 | Contact page | medium | As a User, I want to access contact page, so that I can have ways to contact the owner if I want to.|
 
-### 1.2. Implemented Web Resources
+<!-- TODO: User login / logout  and see dashboard only after login
 
-> Identify the web resources that were implemented in the prototype.
+| US01 | Log in | high | As a Visitor, I want to authenticate into the system, so that I can access privileged information.  |
+| US14 | Access Dashboard | high | As an Authenticated User, I want to be able to access my dashboard, so that I can inform myself on relevant recent activity.|
+| US17 | Log out | high | As a Authenticated User, I want to deauthenticate from the system.|
+-->
+
+### 1.2. Implemented Web Resources
 
 #### Module M01: Authentication and Individual Profile
 
+<!-- TODO: Module M01 functionalities on code -->
+
+| Web Resource Reference | URL           |
+| :----------------------|:--------------|
+| [R101: Login Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r101-login-action) | /login |
+| [R102: Logout Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r102-logout-action) | /logout |
+
 #### Module M02: Dashboard
 
-<!-- <table>
-  <tr>
-    <th>Web Resource Reference</th>
-    <th>URL</th>
-  </tr>
-  <tr>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r201-dashboard-page">R201: Dashboard Page</a></td>
-    <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/dashboard">/dashboard</a></td>
-  </tr>
-  <tr>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r202-view-projects">R202: View Projects</a></td>
-    <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/dashboard/my_projects">/dashboard/my_projects</a></td>
-  </tr>
-  <tr>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r203-view-tasks">R203: View Tasks</a></td>
-    <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/dashboard/tasks">/dashboard/tasks</a></td>
-  </tr>
-</table> -->
+<!-- 
+TODO: Dashboard appears after user is logged in
+-->
 
-#### Module M03: Projects and Project Settings
-
-#### Module M04: Search Engine
-
-<!-- <table>
-  <tr>
-    <th>Web Resource Reference</th>
-    <th>URL</th>
-  </tr>
-  <tr>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r401-search-projects-action">R401: Search Projects</a></td>
-    <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/search_projects">/search_projects</a></td>
-  </tr>
-  <tr>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r403-search-users-action">R403: Search Users</a></td>
-    <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/search_users">/search_users</a></td>
-  </tr>
-  <tr>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r405-search-tasks-action">R405: Search Tasks</a></td>
-    <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/search_tasks">/search_tasks</a></td>
-  </tr>
-</table> -->
-
-#### Module M05: Administration
-
-<!-- <table>
-  <tr>
-    <th>Web Resource Reference</th>
-    <th>URL</th>
-  </tr>
-  <tr>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r501-admin-login-form">R501: Admin Login Form</a></td>
-    <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/admin">/admin</a></td>
-  </tr>
-  <tr>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r502-admin-login-action">R502: Admin Login Action</a></td>
-    <td>POST /admin</a></td>
-  </tr>
-  <tr>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r503-view-projects">R503: View Projects</a></td>
-    <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/admin/projects">/admin/projects</a></td>
-  </tr>
-  <tr>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r504-edit-project-action">R504: Edit Project Action</a></td>
-    <td>POST /admin/projects/edit</a></td>
-  </tr>
-  <tr>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r505-remove-project-action">R505: Remove Project Action</a></td>
-    <td>POST /admin/projects/remove</a></td>
-  </tr>
-  <tr>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r506-view-users">R506: View Users</a></td>
-    <td><a href="http://lbaw1743.lbaw-prod.fe.up.pt/admin/users">/admin/users</a></td>
-  </tr>
-  <tr>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r507-edit-user-action">R507: Edit User Action</a></td>
-    <td>POST /admin/users/edit</a></td>
-  </tr>
-  <tr>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r508-remove-user-action">R508: Remove User Action</a></td>
-    <td>POST /admin/users/remove</a></td>
-  </tr>
-</table> -->
+| Web Resource Reference | URL           |
+| :----------------------|:--------------|
+| [R201: Dashboard Page](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r101-login-action) | [/dashboard](http://lbaw1743.lbaw-prod.fe.up.pt/dashboard) |
 
 #### Module M06: Static Pages
 
