--- a/artifacts/A8/A8.md
+++ b/artifacts/A8/A8.md
@@ -12,6 +12,7 @@ The Vertical Prototype includes the implementation of two or more user stories (
 | US05 | About page | low | As a User, I want to access about page, so that I can see the complete information about the website. |
 | US06 | FAQ page | medium | As a User, I want to access FAQ page, so that I can get answers to most frequently asked questions. |
 | US07 | Contact page | medium | As a User, I want to access contact page, so that I can have ways to contact the owner if I want to.|
+| US11 | View profiles | high | As a User, I want to be able to visit a page with the user information, so that I can inform myself about others (e.g. Their location).|
 
 <!-- TODO: User login / logout  and see dashboard only after login
 
@@ -30,6 +31,7 @@ The Vertical Prototype includes the implementation of two or more user stories (
 | :----------------------|:--------------|
 | [R101: Login Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r101-login-action) | /login |
 | [R102: Logout Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r102-logout-action) | /logout |
+| [R104: View Profile](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r104-view-profile)| [/profile/{id}](http://lbaw1743.lbaw-prod.fe.up.pt/profile/1) |
 
 #### Module M02: Dashboard
 
