--- a/artifacts/A8/A8.md
+++ b/artifacts/A8/A8.md
@@ -1,7 +1,5 @@
 # A8: Vertical prototype
 
-The Vertical Prototype includes the implementation of two or more user stories (the simplest) and aims to validate the architecture presented, also serving to gain familiarity with the technologies used in the project. It should be based on the LBAW skeleton and include work on all layers of the architecture of the solution to implement: user interface, business logic and data access.
-
 ## 1. Implemented Features
 
 ### 1.1. Implemented User Stories
@@ -25,13 +23,13 @@ The Vertical Prototype includes the implementation of two or more user stories (
 
 #### Module M01: Authentication and Individual Profile
 
-<!-- TODO: Module M01 functionalities on code -->
-
 | Web Resource Reference | URL           |
 | :----------------------|:--------------|
+| [R104: View Profile](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r104-view-profile)| [/profile/{id}](http://lbaw1743.lbaw-prod.fe.up.pt/profile/1) |
+<!-- TODO: 
 | [R101: Login Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r101-login-action) | /login |
 | [R102: Logout Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r102-logout-action) | /logout |
-| [R104: View Profile](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r104-view-profile)| [/profile/{id}](http://lbaw1743.lbaw-prod.fe.up.pt/profile/1) |
+-->
 
 #### Module M02: Dashboard
 
@@ -71,9 +69,9 @@ TODO: Dashboard appears after user is logged in
 ## 2. Prototype
 
 The prototype is available at http://lbaw1743.lbaw-prod.fe.up.pt/
-
-Credentials:
-  <!-- TODO: username / password -->
+  <!--
+Credentials: TODO: 
+username / password -->
 
 The code is avalable at https://github.com/mpcmarques/lbaw1743/lbaw-laravel
 
