--- a/artifacts/A9/A9.md
+++ b/artifacts/A9/A9.md
@@ -1,27 +1,58 @@
 # A9: Main accesses to the database and transactions
  
 ## 1. Main Accesses
+
+#M01: Authentication and Individual Profile
  
 > Main accesses to the database.
  
-| SQL Reference | Access Description                          |
-| ------------- | ------------------------------------------- |
-| Web Resource  | Reference to the associated web resource(s) |
-| `Complete SQL Code`                                         |
- 
-...
+<table>
+<tr>
+<th>SQL101</th>
+<td>Creates a new user in the platform</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r103-register-action">R103</a></td>
+</tr>
+<tr>
+<td colspan='2'>
+
+```SQL
+--TODO--
+```
+</td>
+</tr>
+</table>
+                                    |
  
 ## 2. Transactions
- 
+
 > Transactions needed to assure the integrity of the data.
  
-| SQL Reference   | Transaction Name                    |
-| --------------- | ----------------------------------- |
-| Justification   | Justification for the transaction.  |
-| Isolation level | Isolation level of the transaction. |
-| `Complete SQL Code`                                   |
- 
-...
+<table>
+<tr>
+<th>T01</th>
+<td>--TODO--</td>
+</tr>
+<tr>
+<th>Isolation Level</th>
+<td>--TODO--</td>
+</tr>
+<tr>
+<th>Justification</th>
+<td>--TODO--</td>
+</tr>
+<tr>
+<td colspan='2'>
+
+```SQL
+--TODO--
+```
+</td>
+</tr>
+</table>
+
  
 
 ## Revision history
